# bitcask-rs

./: Cargo.toml  README.md
benches/: bench.rs  test.rs
cli/: Cargo.toml
cli/src/: args.rs  handler.rs  lib.rs  main.rs  request.rs
core/: Cargo.toml
core/benches/: bench.rs  rocksdb.rs  sled.rs  test.rs
core/examples/: basic_usage.rs
core/src/: batch.rs  config.rs  db.rs  errors.rs  lib.rs  merge.rs  utils.rs
core/src/data/: data_file.rs  log_record.rs
core/src/file/: io.rs  mmap.rs  mod.rs  system_file.rs
core/src/index/: btree.rs  hashmap.rs  mod.rs  skip_list.rs
core/src/transaction/: engine.rs  manager.rs  mod.rs
http/: Cargo.toml
http/src/: lib.rs  main.rs
record-chunk/: Cargo.toml
record-chunk/src/: errors.rs  lib.rs
src/: batch.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  merge.rs  utils.rs
src/data/: data_file.rs  log_record.rs
src/file/: io.rs  mod.rs  system_file.rs
src/index/: btree.rs  hashmap.rs  mod.rs  skip_list.rs
