[package]
name = "bitcask-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
thiserror = "1.0.57"
bytes = "1.5.0"
prost = "0.12.3"
crc32fast = "1.4.0"

[dev-dependencies]
fake = "2.9.2"
tempfile = "3.10.1"
