[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
axum = "0.7.5"
serde_json = "1.0.115"
toml = "0.8.12"
bitcask-rs-core = { path = "../core/" }
anyhow = "1.0.82"
env_logger = "0.11.3"
log = "0.4.21"
fork = "0.1.23"
