[package]
name = "bitcask-rs-core"
version = "0.10.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "sled"
harness = false

# [[bench]]
# name = "rocksdb"
# harness = false

[[bench]]
name = "test"
harness = false

[features]
compression = ["brotli", "lazy_static"]


[dependencies]
parking_lot = "0.12.1"
thiserror = "1.0.57"
bytes = "1.5.0"
crc32fast = "1.4.0"
crossbeam-skiplist = "0.1.3"
crossbeam-channel = "0.5.12"
hashbrown = "0.14.3"
fs4 = "0.8.1"
memmap2 = "0.9.4"
bitflags = "2.5.0"
bytesize = "1.3.0"
bincode = "1.3.3"
log = "0.4.21"
brotli = { version = "6.0.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
rand = "0.8.5"
fake = "2.9.2"
tempfile = "3.10.1"
criterion = "0.5.1"
rayon = "1.9.0"
sled = "0.34.7"
# rocksdb = "0.22.0"
